remove JDK16 idiom